[gd_scene load_steps=10 format=3 uid="uid://d0i3coxj53peo"]

[ext_resource type="Script" path="res://GAMEJAM/particles/fire_water.gd" id="1_ufma3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xpdmu"]
radius = 15.0

[sub_resource type="CircleShape2D" id="CircleShape2D_pwlyf"]
radius = 100.0

[sub_resource type="Gradient" id="Gradient_s4k3k"]
offsets = PackedFloat32Array(0, 0.454023, 1)
colors = PackedColorArray(0.567623, 0.61382, 0.630365, 1, 0.831025, 0.849079, 0.855545, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_a7d3d"]
gradient = SubResource("Gradient_s4k3k")

[sub_resource type="Curve" id="Curve_7mbry"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.098901), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_ddhu6"]
curve = SubResource("Curve_7mbry")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_aexu7"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(20, 20, 1)
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector3(0, -1, 0)
spread = 10.0
gravity = Vector3(0, 0, 0)
scale_min = 4.0
scale_max = 4.0
scale_curve = SubResource("CurveTexture_ddhu6")
color_ramp = SubResource("GradientTexture1D_a7d3d")
turbulence_enabled = true
turbulence_noise_scale = 3.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_bhnm7"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 50.0
initial_velocity_max = 200.0
gravity = Vector3(0, 0, 0)

[node name="Fireball" type="Area2D"]
script = ExtResource("1_ufma3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_xpdmu")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_pwlyf")

[node name="GPUParticles2D2" type="GPUParticles2D" parent="."]
amount = 500
process_material = SubResource("ParticleProcessMaterial_aexu7")
lifetime = 0.5

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
emitting = false
amount = 150
process_material = SubResource("ParticleProcessMaterial_bhnm7")
explosiveness = 1.0

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
